# 99problems

haskell/: 99problems.cabal  Arithmetic.hs  Lists.hs  Logic.hs
