name:                99problems
version:             0
synopsis:            My take on Ninety-Nine Prolog Problems. I intend to do golfing where possible.
license:             BSD2
author:              Artur Czajka
maintainer:          arturczajka@gmail.com
copyright:           2016 Artur Czajka
category:            Exercises
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Lists, Arithmetic, Logic
  build-depends:       base
                     , mtl
                     , transformers
                     , containers
                     , random
                     , primes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tr00per/99problems
  subdir:   haskell
